--- a/02-CSS/homework/responsive-web/index.html
+++ b/02-CSS/homework/responsive-web/index.html
@@ -5,24 +5,32 @@
   <meta charset="utf-8">
 
   <title>Música 8D</title>
-
+  <!-- CSS only -->
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-
-  <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
 </head>
 
 <body>
 
  <!-- Código del nav acá -->
+ 
+ <nav>
+  <ul>
+    <h2>Musica 8D</h2>
+    <li>Inicio</li>
+    <li>Sobre Nosotros</li>
+    <li>Blog</li>
+    <li>Contacto</li>
+    <li>Registrarse</li>
+  </ul>
+ </nav>
 
   <div class="container home">
 
     <header class="intro">
        <!-- Código de header img acá -->
-      
+      <img class="musica-nueva" src="img/main-header.png" alt="baner">
       <h2>Nueva tecnología</h2>
 
       <p>En estos días se viralizaron nuevas versiones de temas que, escuchados con auriculares, suenan de una manera muy diferente a la original. ¿Aún no escuchaste? Sorprendete</p>
